--- a/templates/product/home.html.twig
+++ b/templates/product/home.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+	<h1>{{ current_locale == 'fr' ? 'Bienvenue !' : 'Welcome !' }}</h1>
 	<div class="container text-center mt-5">
 		<div class="language-switcher mb-4">
 			<div class="d-flex justify-content-center gap-3">
@@ -18,7 +20,5 @@
 				</div>
 			</div>
 		</div>
-
-		<h1>{{ current_locale == 'fr' ? 'Bienvenue' : 'Welcome' }}</h1>
 	</div>
 {% endblock %}
