--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,10 @@ la langue du document HTML en fonction de la locale de la requête -->
 		<meta
 		name="viewport" content="width=device-width, initial-scale=1.0">
 
+		<!-- Favicon -->
+		<link
+		rel="icon" href="{{ asset('favicon.png') }}" type="image/png">
+
 		<!-- dans les autres templates, ce bloc sera remplacé par un titre spécifique à la page-->
 		<title>
 			{% block title %}Mon Site Bilingue1
